--- a/blog/templates/blog/tag_list.html
+++ b/blog/templates/blog/tag_list.html
@@ -1,11 +1,17 @@
+{% extends parent_template|default:"blog/base_blog.html" %}
+
+{% block content %}
 <h2>Tag List</h2>
-    <ul>
-        {% for tag in tag_list %}
-            <li>
-              <a href="">
-                {{ tag.name|title }}</a>
-            </li>
-        {% empty %}
-            <li><em>There are currently no Tags available.</em></li>
-        {% endfor %}
-    </ul>
+<ul>
+    {% for tag in tag_list %}
+    <li>
+        <a href="{{ tag.get_absolute_url }}">
+            {{ tag.name|title }}
+        </a>
+    </li>
+    {% empty %}
+    <li><em>There are currently no Tags available.</em></li>
+    {% endfor %}
+</ul>
+
+{% endblock %}
